fixes vertical scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 }
 
 body{
-  width: calc(100vw-1px);
+  width: 99vw;
 }
 
 h2{
